<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.features.user.AuthActivity">

    <TextView
        android:id="@+id/accountBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/thin_margin"
        android:layout_marginTop="@dimen/thin_margin"
        android:layout_marginEnd="@dimen/thin_margin"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="@dimen/screen_label_drawable_padding"
        android:focusable="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/account_label"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_back"
        app:drawableTint="@color/black" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/authOptionsTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thin_margin"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/primaryDarkColor"
        app:tabMode="fixed"
        app:tabRippleColor="@color/primaryLightColor"
        app:tabSelectedTextColor="@color/primaryTextColor"
        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/signInWithEmailItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_option" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/signInWithPhoneItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_option" />
    </com.google.android.material.tabs.TabLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/auth_padding_horizontal"
        android:paddingVertical="@dimen/auth_padding_vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/field_email_label"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailAddressInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/thin_margin"
                app:boxStrokeColor="@color/gray"
                app:boxStrokeWidth="1dp"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_outline_email_24"
                app:startIconTint="@color/primaryTextColor">

                <EditText
                    android:id="@+id/emailAddressInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="emailAddress"
                    android:hint="@string/field_email_hint"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/regular_spacing_margin"
                android:fontFamily="@font/poppins"
                android:text="@string/field_password_label"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/thin_margin"
                app:boxStrokeColor="@color/gray"
                app:boxStrokeWidth="1dp"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_outline_lock_24"
                app:startIconTint="@color/primaryTextColor">

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="emailAddress"
                    android:hint="@string/field_password_hint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:fontFamily="@font/poppins"
            android:minHeight="@dimen/minimum_button_height"
            android:text="@string/btn_text_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>