<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.features.user.AccountActivity"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_back"
            app:tint="@color/black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/user"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loggedInAsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/logged_in_as_who"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="normal" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignOut"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_out_text"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/accountOptionsTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thin_margin"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/primaryDarkColor"
        app:tabMode="fixed"
        app:tabRippleColor="@color/primaryLightColor"
        app:tabSelectedTextColor="@color/primaryTextColor"
        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/accountViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.appcompat.widget.LinearLayoutCompat>